new header design

--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -11,6 +11,7 @@
 	<link href='http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700|Roboto+Condensed:400,300,700|Raleway:400,100,200,300,500,700,600,800,900|Oswald:400,300,700|Hammersmith+One' rel='stylesheet' type='text/css'>
 
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="/css/{{css}}.css">
 	{% block stylesheets %}{% endblock %}
 </head>
@@ -41,6 +42,9 @@
 	</div>
 
 	{% block modal %} {% endblock %}
+
+	<script src="//code.jquery.com/jquery-2.1.4.js"></script>
+	<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
 	<script type="text/javascript" src="/js/account-menu.js"></script>
 
