--- a/public/css/products.css
+++ b/public/css/products.css
@@ -373,6 +373,33 @@ input[type="submit"] {
   margin: 0.5rem auto;
   position: relative;
 }
+.header .dropdown {
+  padding: 0 1rem;
+}
+.header .dropdown .caret {
+  margin: 0;
+}
+.header a:hover {
+  color: initial;
+  text-decoration: none;
+}
+.am-avatar {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+  -webkit-box-align: center;
+  -moz-box-align: center;
+  -o-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+}
+.am-avatar img {
+  max-width: 3rem;
+}
 .category-menu {
   border-top: 1px solid #eee;
   border-bottom: 1px solid #eee;
