--- a/public/src/stylus/objects/header.styl
+++ b/public/src/stylus/objects/header.styl
@@ -8,3 +8,18 @@
 	max-width max-width
 	margin .5rem auto
 	position relative
+
+	.dropdown
+		padding 0 1rem
+		.caret
+			margin 0
+
+	a:hover
+		color: initial;
+		text-decoration: none;
+
+.am-avatar
+	display: flex;
+	align-items: center;
+	img
+		max-width 3rem
