--- a/app/views/pages/complete-profile.html
+++ b/app/views/pages/complete-profile.html
@@ -4,85 +4,88 @@
 {% set title = 'Arte Manifiesto | Completar Perfil' %}
 
 {% block stylesheets %}
-	<link rel="stylesheet" type="text/css" href="/css/complite-profile.css">
+	<link rel="stylesheet" type="text/css" href="/css/complete-profile.css">
 {% endblock %}
 
 {% block elements %}
 
 	<div class="Profile">
 		<div class="Profile-section">
-			<p class="Profile-section-title section-title-text">Datos Basicos</p>
-			<div class="column">
-				<div class="Profile-section-avatar">
-					<div class="Profile-section-avatar-img">
-						<img src="http://www.furcontest.com/imagenes/default.png">
-						<div class="cover">
-							<i class="fa fa-camera"></i>
-							<input type="file">
-						</div>
-					</div>
-					<div class="Profile-section-avatar-options">
-						<div class="Profile-section-avatar-option">
-							<input type="radio" name="avatar" value="custom" id="avatar-custom">
-							<label class="medium-text" for="avatar-custom">Personalizada</label>
-						</div>
-						<div class="Profile-section-avatar-option">
-							<input type="radio" name="avatar" value="facebook" id="avatar-facebook" checked>
-							<label class="medium-text" for="avatar-facebook">Facebook</label>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="column">
-				<div class="Profile-section-input">
-					<span>artemanifiesto.com/</span>&nbsp;
-					<div>
-						<input class="input" type="text" name="username" placeholder="username">
-					</div>
-				</div>
-				<div class="Profile-section-input column2">
-					<input class="input" type="text" name="city" placeholder="ciudad">
-				</div>
-				<div class="Profile-section-input column2">
-					<input class="input" type="text" name="country" placeholder="pais">
-				</div>
-				<div class="Profile-section-input">
-					<select class="input" name="gender">
-						<option disabled selected>Género</option>
-						<option value="Male">Masculino</option>
-						<option value="Female">Femenino</option>
-					</select>
-				</div>
-				<div class="Profile-section-input">
-					<span>Fecha de nacimiento</span>&nbsp;
-					<div>
-						<input class="input" type="date" name="birthday" placeholder="fecha-nacimiento">
-						<!-- <div class="date">
-								<input type="text" name="" maxlength="2" placeholder="DD">
-								<input type="text" name="" maxlength="2" placeholder="MM">
-								<input type="text" name="" maxlength="2" placeholder="YYYY">
-						</div> -->
-					</div>
-				</div>
-			</div>
+			<p class="Profile-section-title section-title-text">Username</p>
+      <input type="text" name="username" class="form-control" id="exampleInputEmail1" placeholder="">
 		</div>
 		<div class="Profile-section">
+			<p class="Profile-section-title section-title-text">Nombre</p>
+      <input type="text" name="firstname" class="form-control" id="exampleInputEmail1" placeholder="">
+		</div>
+		<div class="Profile-section">
+			<p class="Profile-section-title section-title-text">Apellido</p>
+      <input type="text" name="lastname" class="form-control" id="exampleInputEmail1" placeholder="">
+		</div>
+		<div class="Profile-section">
+			<p class="Profile-section-title section-title-text">Genero</p>
+      <select class="form-control" name="gender">
+				<option value="" disabled selected>Seleccione género</option>
+				<option value="Male">Masculino</option>
+				<option value="Female">Femenino</option>
+      </select>
+		</div>
+		<div class="Profile-section">
+			<p class="Profile-section-title section-title-text">Pais</p>
+      <select class="form-control" name="country">
+				<option value="" disabled selected>Seleccione pais</option>
+        <option value="Peru">Peru</option>
+        <option value="Colombia">Colombia</option>
+        <option value="Chile">Chile</option>
+        <option value="Brasil">Brasil</option>
+        <option value="Mexico">Mexico</option>
+      </select>
+		</div>
+		<div class="Profile-section">
+			<p class="Profile-section-title section-title-text">Ciudad</p>
+      <input type="text" name="city" class="Profile-section-input form-control" id="exampleInputEmail1" placeholder="">
+		</div>
+
+		<!-- <form>
+		  Enter a date before 1980-01-01:
+		  <input type="date" name="bday" max="1979-12-31"><br>
+		  Enter a date after 2000-01-01:
+		  <input type="date" name="bday" min="2000-01-02"><br>
+		</form>
+
+		<label for="day">Date of Birth (autotab):</label>
+		<div id="date1" class="datefield">
+		    <input id="day" type="tel" maxlength="2" placeholder="DD"/> /
+		    <input id="month" type="tel" maxlength="2" placeholder="MM"/>/
+		    <input id="year" type="tel" maxlength="4" placeholder="YYYY"/>
+		</div>
+
+		<br/><br/><br/>
+
+		<label for="day">Date of Birth (normal):</label>
+		<div id="date2" class="datefield">
+		    <input id="day" type="tel" maxlength="2" placeholder="DD"/> /
+		    <input id="month" type="tel" maxlength="2" placeholder="MM"/> /
+		    <input id="year" type="tel" maxlength="4" placeholder="YYYY" />
+		</div> -->
+
+		<div class="Profile-section">
 			<p class="Profile-section-title section-title-text">Redes sociales</p>
-			<div class="column">
-				<div class="Profile-section-input">
-					<input class="input" type="url" name="facebook" placeholder="facebook">
-				</div>
-				<div class="Profile-section-input">
-					<input class="input" type="url" name="twitter" placeholder="twitter">
-				</div>
+			<div class="am-social-input">
+			  <h6>Facebook</h6>
+			  <input type="text" name="facebook" class="form-control input-sm" id="exampleInputEmail1">
 			</div>
-			<div class="column">
-				<div class="Profile-section-input">
-					<input class="input" type="url" name="behance" placeholder="behance">
-				</div>
-				<div class="Profile-section-input">
-					<input class="input" type="url" name="tumblr" placeholder="tumblr">
-				</div>
+			<div class="am-social-input">
+			  <h6>Twitter</h6>
+			  <input type="text" name="twitter" class="form-control input-sm" id="exampleInputEmail1">
+			</div>
+			<div class="am-social-input">
+			  <h6>Tumblr</h6>
+			  <input type="text" name="tumblr" class="form-control input-sm" id="exampleInputEmail1">
+			</div>
+			<div class="am-social-input">
+			  <h6>Behance</h6>
+			  <input type="text" name="behance" class="form-control input-sm" id="exampleInputEmail1">
 			</div>
 		</div>
 		<div class="Profile-section">
@@ -93,28 +96,119 @@
 		</div>
 		<div class="Profile-section">
 			<p class="Profile-section-title section-title-text">Intereses</p>
-			<div class="Profile-section-options">
-				{% for categorie in categories %}
-					<div class="Profile-section-option" data-id={{ categorie.id }}>
-						<img src="http://conexiones.digital/wp-content/uploads/2015/06/mural.gif">
-						<p>{{ categorie.name }}</p>
-						<div class="cover">
-							<i class="fa fa-check"></i>
-						</div>
-					</div>
-				{% endfor %}
+			<div class="row am-interests">
+			  <div class="col-xs-6 col-md-4">
+			    <div class="am-interest selected">
+			    	<img src="/../img/interests/arte-urbano.jpg">
+			    	<p>Arte urbano</p>
+			    	<div class="am-interest-check">
+			    		<i class="fa fa-check"></i>
+			    	</div>
+			    </div>
+			  </div>
+			  <div class="col-xs-6 col-md-4">
+			  	<div class="am-interest">
+			  		<img src="/../img/interests/collage.jpg">
+			  		<p>Collage</p>
+			    	<div class="am-interest-check">
+			    		<i class="fa fa-check"></i>
+			    	</div>
+			  	</div>
+			  </div>
+			  <div class="col-xs-6 col-md-4">
+			  	<div class="am-interest selected">
+			  		<img src="/../img/interests/dibujo.jpg">
+			  		<p>Dibujo</p>
+			    	<div class="am-interest-check">
+			    		<i class="fa fa-check"></i>
+			    	</div>
+			  	</div>
+			  </div>
+			  <div class="col-xs-6 col-md-4">
+			  	<div class="am-interest">
+			  		<img src="/../img/interests/fotografia.jpg">
+			  		<p>Fotrografia</p>
+			    	<div class="am-interest-check">
+			    		<i class="fa fa-check"></i>
+			    	</div>
+			  	</div>
+			  </div>
+			  <div class="col-xs-6 col-md-4">
+			  	<div class="am-interest selected">
+			  		<img src="/../img/interests/grabado.jpg">
+			  		<p>Grabado</p>
+			    	<div class="am-interest-check">
+			    		<i class="fa fa-check"></i>
+			    	</div>
+			  	</div>
+			  </div>
+			  <div class="col-xs-6 col-md-4">
+			  	<div class="am-interest">
+			  		<img src="/../img/interests/ilustracion.jpg">
+			  		<p>Ilustracion</p>
+			    	<div class="am-interest-check">
+			    		<i class="fa fa-check"></i>
+			    	</div>
+			  	</div>
+			  </div>
+			  <div class="col-xs-6 col-md-4">
+			  	<div class="am-interest selected">
+			  		<img src="/../img/interests/instalacion.jpeg">
+			  		<p>Instalacion</p>
+			    	<div class="am-interest-check">
+			    		<i class="fa fa-check"></i>
+			    	</div>
+			  	</div>
+			  </div>
+			  <div class="col-xs-6 col-md-4">
+			  	<div class="am-interest">
+			  		<img src="/../img/interests/pintura.jpg">
+			  		<p>Pintura</p>
+			    	<div class="am-interest-check">
+			    		<i class="fa fa-check"></i>
+			    	</div>
+			  	</div>
+			  </div>
 			</div>
+		</div>
+		<div class="checkbox">
+		  <label>
+		    <input type="checkbox"> Soy Artista Profesional
+		  </label>
 		</div>
 		<div class="Profile-section">
 			<p class="Profile-section-title section-title-text">Especialidades</p>
-			<ul class="checkbox-list">
-				{% for categorie in categories %}
-					<li class="checkbox-list__item" data-id="{{ categorie.id }}">
-						<input type="checkbox" name="category" value="arte-urbano"> <span>{{ categorie.name }}</span>
-					</li>
-				{% endfor %}
-			</ul>
+			<div>
+			  <label class="checkbox-inline">
+			    <input type="checkbox" id="inlineCheckbox1" value="option1"> Arte Urbano
+			  </label>
+			  <label class="checkbox-inline">
+			    <input type="checkbox" id="inlineCheckbox2" value="option2"> Collage
+			  </label>
+			  <label class="checkbox-inline">
+			    <input type="checkbox" id="inlineCheckbox3" value="option3"> Dibujo
+			  </label>
+			  <label class="checkbox-inline">
+			    <input type="checkbox" id="inlineCheckbox1" value="option1"> Fotografía
+			  </label>
+			  <label class="checkbox-inline">
+			    <input type="checkbox" id="inlineCheckbox2" value="option2"> Grabado
+			  </label>
+			  <label class="checkbox-inline">
+			    <input type="checkbox" id="inlineCheckbox3" value="option3"> Ilustración
+			  </label>
+			  <label class="checkbox-inline">
+			    <input type="checkbox" id="inlineCheckbox1" value="option1"> Instalación
+			  </label>
+			  <label class="checkbox-inline">
+			    <input type="checkbox" id="inlineCheckbox2" value="option2"> Pintura
+			  </label>
+			  <label class="checkbox-inline">
+			    <input type="checkbox" id="inlineCheckbox3" value="option3"> Técnica Mixta
+			  </label>
+			</div>
 		</div>
+		<p class="error-message">Escoja un username</p>
 		<button class="button-solid" data-color='red'>Guardar</button>
 	</div>
 
@@ -132,6 +226,6 @@
 	</script>
 
 	<script type="text/javascript" src="/js/vendor/jquery.min.js"></script>
-	<script type="text/javascript" src="/js/complite-profile.js"></script>
+	<script type="text/javascript" src="/js/complete-profile.js"></script>
 
 {% endblock %}
