--- a/public/css/base.css
+++ b/public/css/base.css
@@ -592,3 +592,50 @@ body {
   background: #fff;
   margin: 2rem auto;
 }
+.checkbox-inline:first-child {
+  margin-left: 0.65rem;
+}
+.am-interests {
+  margin: 0;
+}
+.am-interest {
+  display: table;
+  margin: auto;
+  cursor: pointer;
+  position: relative;
+}
+.am-interest img {
+  width: 100%;
+  height: 100px;
+}
+.am-interest p {
+  text-align: center;
+}
+.am-interest-check {
+  position: absolute;
+  top: 23%;
+  left: 50%;
+  -webkit-transform: translate(-50%, 0);
+  -moz-transform: translate(-50%, 0);
+  -o-transform: translate(-50%, 0);
+  -ms-transform: translate(-50%, 0);
+  transform: translate(-50%, 0);
+  display: none;
+}
+.am-interest-check i {
+  color: #fff;
+  font-size: 1.75em;
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
+  padding: 0.5rem;
+  background: #6cc6a2;
+  border: 5px solid #fff;
+}
+.am-interest.selected .am-interest-check {
+  display: block;
+}
+@media (max-width: 991px) {
+  .am-interest img {
+    height: 150px;
+  }
+}
