--- a/public/css/complete-profile.css
+++ b/public/css/complete-profile.css
@@ -1,5 +1,5 @@
 /*------------------------------------*
-	$ CART
+	$ ACCOUNT
 *------------------------------------*/
 body {
   margin: 0;
@@ -639,6 +639,139 @@ body {
     height: 150px;
   }
 }
+.facebook-button {
+  color: #fff;
+  display: table-cell;
+  padding: 0.75rem;
+  font-weight: 600;
+  font-size: 0.9rem;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+  letter-spacing: 1px;
+  font-family: 'Roboto Condensed';
+  background: -webkit-linear-gradient(#4e69a2, #3b5998);
+  background: -moz-linear-gradient(#4e69a2, #3b5998);
+  background: -o-linear-gradient(#4e69a2, #3b5998);
+  background: -ms-linear-gradient(#4e69a2, #3b5998);
+  background: linear-gradient(#4e69a2, #3b5998);
+}
+.facebook-button i {
+  font-size: 1.25em;
+}
+.facebook-button[data-expand='true'] {
+  display: block;
+  text-align: center;
+}
+.button-solid {
+  color: #fff;
+  cursor: pointer;
+  font-size: 1rem;
+  padding: 0.5em 1em;
+  background: #3000ff;
+  display: table-cell;
+  text-transform: uppercase;
+  font-family: 'Roboto Condensed';
+}
+.button-solid[data-size='small'] {
+  font-size: 0.85rem;
+}
+.button-solid[data-size='large'] {
+  font-size: 1.15rem;
+}
+.button-solid[data-color='red'] {
+  background: #f54545;
+}
+.button-solid[data-color='gray'] {
+  background: #cfcfcf;
+}
+.button-solid[data-expand='true'] {
+  display: block;
+  text-align: center;
+  width: 100%;
+}
+.button-filter {
+  padding: 0.5em 0.75rem;
+  font-family: 'Raleway';
+  border: 1px solid #ddd;
+  cursor: pointer;
+}
+.button-liner {
+  color: #000;
+  cursor: pointer;
+  font-size: 1rem;
+  letter-spacing: 1px;
+  display: table-cell;
+  border: 1px solid #bbb;
+  text-transform: uppercase;
+  font-family: 'Roboto Condensed';
+}
+.button-liner__action {
+  padding: 0.5em;
+  display: table-cell;
+}
+.button-liner__action.following,
+.button-liner__action.cancel {
+  display: none;
+}
+.button-liner__number {
+  padding: 0.5em;
+  display: table-cell;
+  border-left: 1px solid #bbb;
+}
+.button-liner[data-size='small'] {
+  font-size: 0.85rem;
+}
+.button-liner[data-size='large'] {
+  font-size: 1.15rem;
+}
+.button-liner.disabled {
+  color: #aaa;
+  border-color: #ccc;
+}
+.button-liner.disabled .button-liner__number {
+  border-color: #bbb;
+}
+.button-liner.disabled .button-liner__action.folllow {
+  display: none;
+}
+.button-liner.disabled .button-liner__action.following {
+  display: table-cell;
+}
+.button-liner.disabled:hover .button-liner__action.following {
+  display: none;
+}
+.button-liner.disabled:hover .button-liner__action.cancel {
+  display: table-cell;
+}
+.button-like,
+.button-wish-list {
+  color: #444;
+  font-weight: 100;
+  font-size: 0.85em;
+  letter-spacing: 1px;
+  font-family: 'Roboto Condensed';
+  cursor: pointer;
+}
+.button-like .fa-heart,
+.button-wish-list .fa-heart {
+  color: #f54545;
+  display: none;
+}
+.button-like.active .fa-heart,
+.button-wish-list.active .fa-heart {
+  display: inline;
+}
+.button-like.active .fa-heart-o,
+.button-wish-list.active .fa-heart-o {
+  display: none;
+}
+.button-avatar {
+  max-width: 2.5rem;
+}
+.button-avatar img {
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
+}
 .input {
   font-size: 1rem;
   padding: 0.5em;
@@ -909,251 +1042,218 @@ body {
 .checkbox-list__item span {
   padding-left: 0.25rem;
 }
-.facebook-button {
-  color: #fff;
-  display: table-cell;
-  padding: 0.75rem;
-  font-weight: 600;
+.am-complete-profile {
+  max-width: 700px;
+  margin: auto;
+  padding: 2rem 1.5rem;
+}
+.am-complete-profile-submit {
+  display: table;
+  margin: auto;
+}
+.input {
   font-size: 0.9rem;
-  -webkit-border-radius: 4px;
-  border-radius: 4px;
+}
+.Profile {
+  max-width: 733.3333333333334px;
+  margin: auto;
+  padding: 0.25rem;
+}
+.Profile-section {
+  padding: 0.25rem 0.5rem;
+}
+.Profile-section-input {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+  -webkit-box-align: center;
+  -moz-box-align: center;
+  -o-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+}
+.Profile-section-input span {
   letter-spacing: 1px;
-  font-family: 'Roboto Condensed';
-  background: -webkit-linear-gradient(#4e69a2, #3b5998);
-  background: -moz-linear-gradient(#4e69a2, #3b5998);
-  background: -o-linear-gradient(#4e69a2, #3b5998);
-  background: -ms-linear-gradient(#4e69a2, #3b5998);
-  background: linear-gradient(#4e69a2, #3b5998);
-}
-.facebook-button i {
-  font-size: 1.25em;
-}
-.facebook-button[data-expand='true'] {
-  display: block;
-  text-align: center;
-}
-.button-solid {
-  color: #fff;
-  cursor: pointer;
-  font-size: 1rem;
-  padding: 0.5em 1em;
-  background: #3000ff;
-  display: table-cell;
-  text-transform: uppercase;
-  font-family: 'Roboto Condensed';
-}
-.button-solid[data-size='small'] {
-  font-size: 0.85rem;
-}
-.button-solid[data-size='large'] {
-  font-size: 1.15rem;
-}
-.button-solid[data-color='red'] {
-  background: #f54545;
-}
-.button-solid[data-color='gray'] {
-  background: #cfcfcf;
-}
-.button-solid[data-expand='true'] {
-  display: block;
-  text-align: center;
-  width: 100%;
-}
-.button-filter {
-  padding: 0.5em 0.75rem;
   font-family: 'Raleway';
-  border: 1px solid #ddd;
-  cursor: pointer;
-}
-.button-liner {
-  color: #000;
-  cursor: pointer;
-  font-size: 1rem;
-  letter-spacing: 1px;
-  display: table-cell;
-  border: 1px solid #bbb;
-  text-transform: uppercase;
-  font-family: 'Roboto Condensed';
-}
-.button-liner__action {
-  padding: 0.5em;
-  display: table-cell;
-}
-.button-liner__action.following,
-.button-liner__action.cancel {
-  display: none;
-}
-.button-liner__number {
-  padding: 0.5em;
-  display: table-cell;
-  border-left: 1px solid #bbb;
-}
-.button-liner[data-size='small'] {
   font-size: 0.85rem;
 }
-.button-liner[data-size='large'] {
+.Profile-section-input div {
+  -webkit-box-flex: 1;
+  -moz-box-flex: 1;
+  -o-box-flex: 1;
+  box-flex: 1;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+}
+.Profile-section-title {
   font-size: 1.15rem;
+  margin: 0.5rem 0;
 }
-.button-liner.disabled {
-  color: #aaa;
-  border-color: #ccc;
+.Profile-section-avatar-img {
+  max-width: 120px;
+  margin: auto;
+  position: relative;
 }
-.button-liner.disabled .button-liner__number {
-  border-color: #bbb;
+.Profile-section-avatar-img:hover .cover {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
 }
-.button-liner.disabled .button-liner__action.folllow {
+.Profile-section-avatar-img .cover {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.25);
   display: none;
 }
-.button-liner.disabled .button-liner__action.following {
-  display: table-cell;
+.Profile-section-avatar-img .cover i {
+  margin: auto;
+  font-size: 2rem;
+  color: #fff;
 }
-.button-liner.disabled:hover .button-liner__action.following {
-  display: none;
-}
-.button-liner.disabled:hover .button-liner__action.cancel {
-  display: table-cell;
-}
-.button-like,
-.button-wish-list {
-  color: #444;
-  font-weight: 100;
-  font-size: 0.85em;
-  letter-spacing: 1px;
-  font-family: 'Roboto Condensed';
+.Profile-section-avatar-img .cover input {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+  filter: alpha(opacity=0);
   cursor: pointer;
 }
-.button-like .fa-heart,
-.button-wish-list .fa-heart {
-  color: #f54545;
+.Profile-section-avatar-options {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+  -webkit-box-pack: center;
+  -moz-box-pack: center;
+  -o-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+.Profile-section-avatar-option {
+  padding: 0.5rem;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+  -webkit-box-align: center;
+  -moz-box-align: center;
+  -o-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+}
+.Profile-section-avatar-option label {
+  font-size: 0.7rem;
+}
+.Profile-section-options {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+  -webkit-box-lines: multiple;
+  -moz-box-lines: multiple;
+  -o-box-lines: multiple;
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-box-pack: center;
+  -moz-box-pack: center;
+  -o-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+.Profile-section-option {
+  max-width: 200px;
+  background: #f6f6f6;
+  margin: 0.5rem;
+  position: relative;
+  cursor: pointer;
+}
+.Profile-section-option[selected="true"] .cover {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+}
+.Profile-section-option .cover {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  width: 100%;
   display: none;
 }
-.button-like.active .fa-heart,
-.button-wish-list.active .fa-heart {
-  display: inline;
-}
-.button-like.active .fa-heart-o,
-.button-wish-list.active .fa-heart-o {
-  display: none;
-}
-.button-avatar {
-  max-width: 2.5rem;
-}
-.button-avatar img {
+.Profile-section-option .cover .fa {
+  margin: auto;
+  color: #fff;
+  font-size: 1.5rem;
   -webkit-border-radius: 50%;
   border-radius: 50%;
-}
-.cart {
-  padding: 1rem 0.5rem;
-}
-.cart >p {
-  color: #59c097;
-  max-width: 800px;
-  margin: 0.5rem auto;
-  font-family: 'Roboto Condensed';
-  letter-spacing: 0.5px;
-}
-.cart-inner {
-  max-width: 800px;
-  margin: 0 auto;
-  border: 1px solid #bbb;
-}
-.cart-item {
-  color: #585858;
   padding: 0.5rem;
-  display: -webkit-box;
-  display: -moz-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: box;
-  display: flex;
-  -webkit-box-pack: justify;
-  -moz-box-pack: justify;
-  -o-box-pack: justify;
-  -ms-flex-pack: justify;
-  -webkit-justify-content: space-between;
-  justify-content: space-between;
-  -webkit-box-align: center;
-  -moz-box-align: center;
-  -o-box-align: center;
-  -ms-flex-align: center;
-  -webkit-align-items: center;
-  align-items: center;
+  background: #f54545;
+  border: solid 5px #fff;
 }
-.cart-item:not(:last-child) {
-  border-bottom: 1px solid #ddd;
-}
-.cart-item:hover {
-  background: #eee;
-}
-.cart-item-product,
-.cart-item-setings {
-  display: -webkit-box;
-  display: -moz-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: box;
-  display: flex;
-  -webkit-box-align: center;
-  -moz-box-align: center;
-  -o-box-align: center;
-  -ms-flex-align: center;
-  -webkit-align-items: center;
-  align-items: center;
-}
-.cart-item-image {
-  max-width: 60px;
-}
-.cart-item-name {
-  padding-left: 0.5rem;
-  font-family: 'Oswald';
-  letter-spacing: 0.75px;
-}
-.cart-item-price {
-  font-family: 'Oswald';
-  letter-spacing: 0.75px;
-  font-size: 0.9rem;
+.Profile-section-option img,
+.Profile-section-option p {
   padding: 0.5rem;
 }
-.cart-item-quantity {
-  padding: 0.5rem;
-}
-.cart-item-quantity input {
-  width: 2rem;
-  color: #585858;
-}
-.cart-item-closed {
-  padding: 0.5rem;
-  font-size: 1.25rem;
+.Profile-section-option p {
+  font-family: 'Raleway';
   cursor: pointer;
-  color: #aaa;
+  font-size: 0.8rem;
+  letter-spacing: 1px;
+  text-align: center;
 }
-.cart-totals {
-  display: -webkit-box;
-  display: -moz-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: box;
-  display: flex;
-  -webkit-box-pack: end;
-  -moz-box-pack: end;
-  -o-box-pack: end;
-  -ms-flex-pack: end;
-  -webkit-justify-content: flex-end;
-  justify-content: flex-end;
-  padding: 0.5rem 1rem;
+.Profile button {
+  display: table;
+  margin: 1rem auto;
 }
-.cart-totals .prices {
-  font-family: 'Oswald';
-  color: #888;
-  font-weight: 300;
-  letter-spacing: 0.75px;
-  font-size: 0.85rem;
+@media (min-width: 720px) {
+  .carousel {
+    height: 10.65rem;
+  }
 }
-.cart-totals .prices td {
-  text-align: right;
-  padding-left: 1rem;
+.column {
+  width: 49.715%;
+  display: inline-block;
+  vertical-align: top;
 }
-.cart-totals .prices .total {
-  font-weight: 400;
-  color: #333;
+.column2 {
+  display: inline-block;
+  vertical-align: top;
+  width: 45.813%;
+  margin: 0 0.5rem;
+}
+.error-message {
+  font-family: 'Raleway';
+  color: #f54545;
+  font-weight: 600;
+  letter-spacing: 0.5px;
+  font-size: 0.95rem;
+  display: table;
+  margin: 1rem auto;
+  display: none;
 }
