--- a/public/src/stylus/base.styl
+++ b/public/src/stylus/base.styl
@@ -23,7 +23,7 @@ html
 @media (min-width: tablet-medium)
 	html
 		font-size 100%
-		
+
 body
 	// min-height 100%
 	height 100%
@@ -37,7 +37,7 @@ body
 		flex 1
 	&__content.gray
 		background #f6f6f6
-		
+
 .modal
 	background rgba(black, .25)
 	position absolute
@@ -51,3 +51,44 @@ body
 		max-width 400px
 		background white
 		margin 2rem auto
+
+
+.checkbox-inline
+	&:first-child
+		// margin-left 1rem
+		margin-left .65rem
+
+.am-interests
+	margin 0
+
+.am-interest
+	display table
+	margin auto
+	cursor pointer
+	position relative
+	img
+		width 100%
+		height 100px
+	p
+		text-align center
+	&-check
+		position: absolute;
+		top: 23%;
+		left: 50%;
+		transform translate(-50%, 0)
+		display none
+		i
+			color: white;
+			font-size: 1.75em;
+			border-radius: 50%;
+			padding: 0.5rem;
+			background: #6cc6a2;
+			border: 5px solid rgb(255, 255, 255);
+	&.selected
+		.am-interest-check
+			display block
+
+@media (max-width: 991px)
+	.am-interest
+		img
+			height 150px
