--- a/public/src/stylus/base.styl
+++ b/public/src/stylus/base.styl
@@ -92,3 +92,8 @@ body
 	.am-interest
 		img
 			height 150px
+
+.dropdown-menu {
+	// font-size: .85rem !important;
+	font-size: .8rem !important;
+}
