--- a/public/css/single-work.css
+++ b/public/css/single-work.css
@@ -263,7 +263,7 @@ a:hover {
   }
 }
 .square-menu-container {
-  height: 3.5rem;
+  height: 3.35rem;
   overflow: hidden;
   max-width: 1100px;
   margin: auto;
@@ -286,6 +286,10 @@ a:hover {
   background: #fff;
   cursor: pointer;
   position: relative;
+  font-size: 0.85rem;
+}
+.square-menu__item[selected=true] {
+  background: #fff59d;
 }
 .square-menu__item:not(:first-child) {
   margin-left: 0.5rem;
@@ -638,6 +642,9 @@ body {
   .am-interest img {
     height: 150px;
   }
+}
+.dropdown-menu {
+  font-size: 0.8rem !important;
 }
 /*------------------------------------*
 	$INT TO STRING
@@ -1223,10 +1230,6 @@ body {
   -ms-transition: box-shadow ease-in-out 125ms;
   transition: box-shadow ease-in-out 125ms;
   position: relative;
-}
-.works .work:hover {
-  -webkit-box-shadow: rgba(0,0,0,0.35) 0 0 10px;
-  box-shadow: rgba(0,0,0,0.35) 0 0 10px;
 }
 .works .work .cover {
   position: absolute;
