--- a/public/src/stylus/objects/works.styl
+++ b/public/src/stylus/objects/works.styl
@@ -16,8 +16,8 @@ work-width = 150px
 		border 1px solid #eee
 		transition box-shadow ease-in-out 125ms
 		position relative
-		&:hover
-			box-shadow rgba(0,0,0,0.35) 0 0 10px
+		// &:hover
+		// 	box-shadow rgba(0,0,0,0.35) 0 0 10px
 		.cover
 			position absolute
 			top 0
