--- a/public/src/stylus/elements/menus.styl
+++ b/public/src/stylus/elements/menus.styl
@@ -98,6 +98,12 @@
 			margin-left .5rem
 		&:not(:last-child)
 			margin-right .5rem
+		small
+			background white
+			border-radius 5px
+			padding 0 .35rem
+			text-align: center;
+			display: inline-block;
 
 
 /*------------------------------------*
