--- a/public/src/stylus/elements/variables.styl
+++ b/public/src/stylus/elements/variables.styl
@@ -1,8 +1,10 @@
 /*------------------------------------*
 	$ VARIABLES
 *------------------------------------*/
-mobile-medium = 300px	// Mobile Medium
-tablet 				= 590px // Tablet
+mobile = 350px	// Mobile Medium
+mobile-medium	= 500px // Tablet Small
+mobile-large 	= 550px // Tablet
+tablet 				= 670px // Tablet
 tablet-medium = 720px // Tablet Medium
 desktop 			= 920px // Desktop
 
