--- a/public/src/stylus/objects/collections.styl
+++ b/public/src/stylus/objects/collections.styl
@@ -47,8 +47,8 @@
 		font-size 0.95rem
 		margin-top 0.5rem
 		letter-spacing .25px
-		
-		
+
+
 collection-width = 250px
 
 @media screen and (min-width: collection-width*2)
@@ -58,18 +58,24 @@ collection-width = 250px
 		.collection-wrapper
 			flex 1 50%
 			max-width 50%
-			
+
 @media screen and (min-width: collection-width*3)
 	.collections
 		.collection-wrapper
 			flex 1 33.333%
 			max-width 33.333%
-			
+
 @media screen and (min-width: collection-width*4)
 	.collections
 		.collection-wrapper
 			flex 1 25%
 			max-width 25%
+
+@media screen and (min-width: collection-width*5)
+	.collections
+		.collection-wrapper
+			flex 1 20%
+			max-width 20%
 
 // @media screen and (min-width: collection-width*5)
 // 	.collections
