--- a/public/src/stylus/objects/section.styl
+++ b/public/src/stylus/objects/section.styl
@@ -4,7 +4,8 @@
 .section
 	&__title
 		margin auto
-		padding 1.5rem 1rem
+		// padding 1.5rem 1rem
+		padding 2rem 1rem .5rem 1rem
 		text-align center
 		max-width max-width
 	&__navigation
@@ -163,6 +164,9 @@
 		&.selected
 			// background rgb(237, 237, 237)
 			background: #FFF59D;
+		.name
+			width 5.75rem
+			display: inline-block;
 
 	&__price
 		padding 1rem 1rem 2rem 1rem
