--- a/public/src/stylus/elements/logo.styl
+++ b/public/src/stylus/elements/logo.styl
@@ -8,9 +8,10 @@
 		max-width 2rem
 	&__normal
 		max-width 11rem
-		// max-width 15rem
-		// max-width 14rem
 		display none
+
+// @media (min-width tablet-medium)
+
 
 @media (min-width mobile-medium)
 	.logo__small
@@ -18,6 +19,6 @@
 	.logo__normal
 		display block
 
-@media (min-width 450px)
+@media (min-width mobile-large)
 	.logo__normal
 		max-width 13.5rem
